# pyspark-end-to-end-application

./: .gitattributes  .gitignore  LICENSE  README.md  app_pipeline_prescriber_reseach.py  app_pipeline_prescriber_research.py  app_start_pipeline.py  pyproject.toml
.github/workflows/: CI.YAML  CI.yaml
airflow/: airflow.cfg  airflow.db
airflow/dags/: dag_prescriber_reseach.py
airflow/logs/scheduler/: latest
cluster_manager/: airflow-start.sh  airflow-stop.sh  hadoop_commands.IPYNB  start-cluster.sh  stop-cluster.sh
configs/: logging_to_file.conf
hive/: create_tables.sql
img/: excalidraw.excalidraw
test/: test_class_presciber_research.py  test_create_objects.py  test_data_ingest.py  test_validation.py
utils/: create_objects.py  get_all_variables.py  prescriber_reseach.py  prescriber_research.py  run_data_ingest.py  validations.py
