[tool.poetry]
name = "pyspark-end-to-end-application"
version = "0.1.0"
description = "Pyspark Application"
authors = ["Phillipe Santos"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^7.4.3"
taskipy = "^1.12.0"
blue = "^0.9.1"
isort = "^5.12.0"
pyspark = "3.3.0"
pytest-mock = "^3.12.0"
hdfs = {extras = ["avro", "dataframe", "kerberos"], version = "^2.7.3"}
apache-airflow-providers-apache-hdfs = "^4.2.0"
apache-airflow-providers-apache-spark = {extras = ["cncf-kubernetes"], version = "^4.3.0"}

[tool.isort]
profile = "black"
known_third_party = []

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
test = "pytest -v"