[tool.poetry]
name = "pyspark-end-to-end-application"
version = "0.1.0"
description = "Pyspark Application"
authors = ["Phillipe Santos"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^7.4.3"
taskipy = "^1.12.0"
blue = "^0.9.1"
isort = "^5.12.0"
pyspark = "3.3.0"
pytest-mock = "^3.12.0"
# hdfs = {extras = ["avro", "dataframe", "kerberos"], version = "^2.7.3"}
# apache-airflow-providers-apache-hdfs = "^4.2.0"
apache-airflow-providers-apache-spark = {extras = ["cncf-kubernetes"], version = "^4.3.0"}

# [tool.poetry.group.dev.dependencies]
# aiohttp = {version = "3.8.4", allow-prereleases = true}
# aiosignal = {version = "1.3.1", allow-prereleases = true}
# alembic = {version = "1.10.4", allow-prereleases = true}
# anyio = {version = "3.6.2", allow-prereleases = true}
# apache-airflow = {version = "2.6.1", allow-prereleases = true}
# apache-airflow-providers-common-sql = {version = "1.4.0", allow-prereleases = true}
# apache-airflow-providers-ftp = {version = "3.3.1", allow-prereleases = true}
# apache-airflow-providers-http = {version = "4.3.0", allow-prereleases = true}
# apache-airflow-providers-imap = {version = "3.1.1", allow-prereleases = true}
# apache-airflow-providers-sqlite = {version = "3.3.2", allow-prereleases = true}
# apispec = {version = "5.2.2", allow-prereleases = true}
# argcomplete = {version = "3.0.8", allow-prereleases = true}
# asgiref = {version = "3.6.0", allow-prereleases = true}
# async-timeout = {version = "4.0.2", allow-prereleases = true}
# attrs = {version = "23.1.0", allow-prereleases = true}
# babel = {version = "2.12.1", allow-prereleases = true}
# black = {version = "22.1.0", allow-prereleases = true}
# blinker = {version = "1.6.2", allow-prereleases = true}
# blue = {version = "0.9.1", allow-prereleases = true}
# cachelib = {version = "0.9.0", allow-prereleases = true}
# cattrs = {version = "22.2.0", allow-prereleases = true}
# certifi = {version = "2023.5.7", allow-prereleases = true}
# cffi = {version = "1.15.1", allow-prereleases = true}
# charset-normalizer = {version = "2.1.1", allow-prereleases = true}
# click = {version = "8.1.3", allow-prereleases = true}
# clickclick = {version = "20.10.2", allow-prereleases = true}
# colorama = {version = "0.4.6", allow-prereleases = true}
# colorlog = {version = "4.8.0", allow-prereleases = true}
# configupdater = {version = "3.1.1", allow-prereleases = true}
# connexion = {version = "2.14.2", allow-prereleases = true}
# cron-descriptor = {version = "1.3.0", allow-prereleases = true}
# croniter = {version = "1.3.14", allow-prereleases = true}
# cryptography = {version = "40.0.2", allow-prereleases = true}
# deprecated = {version = "1.2.13", allow-prereleases = true}
# dill = {version = "0.3.1.1", allow-prereleases = true}
# dnspython = {version = "2.3.0", allow-prereleases = true}
# docutils = {version = "0.20", allow-prereleases = true}
# email-validator = {version = "1.3.1", allow-prereleases = true}
# exceptiongroup = {version = "1.1.1", allow-prereleases = true}
# flake8 = {version = "4.0.1", allow-prereleases = true}
# flask = {version = "2.2.5", allow-prereleases = true}
# flask-appbuilder = {version = "4.3.0", allow-prereleases = true}
# flask-babel = {version = "2.0.0", allow-prereleases = true}
# flask-caching = {version = "2.0.2", allow-prereleases = true}
# flask-jwt-extended = {version = "4.4.4", allow-prereleases = true}
# flask-limiter = {version = "3.3.1", allow-prereleases = true}
# flask-login = {version = "0.6.2", allow-prereleases = true}
# flask-session = {version = "0.5.0", allow-prereleases = true}
# flask-sqlalchemy = {version = "2.5.1", allow-prereleases = true}
# flask-wtf = {version = "1.1.1", allow-prereleases = true}
# frozenlist = {version = "1.3.3", allow-prereleases = true}
# graphviz = {version = "0.20.1", allow-prereleases = true}
# greenlet = {version = "2.0.2", allow-prereleases = true}
# gunicorn = {version = "20.1.0", allow-prereleases = true}
# h11 = {version = "0.14.0", allow-prereleases = true}
# httpcore = {version = "0.16.3", allow-prereleases = true}
# httpx = {version = "0.23.3", allow-prereleases = true}
# idna = {version = "3.4", allow-prereleases = true}
# importlib-metadata = {version = "4.13.0", allow-prereleases = true}
# importlib-resources = {version = "5.12.0", allow-prereleases = true}
# inflection = {version = "0.5.1", allow-prereleases = true}
# iniconfig = {version = "2.0.0", allow-prereleases = true}
# isort = {version = "5.12.0", allow-prereleases = true}
# itsdangerous = {version = "2.1.2", allow-prereleases = true}
# jinja2 = {version = "3.1.2", allow-prereleases = true}
# jsonschema = {version = "4.17.3", allow-prereleases = true}
# lazy-object-proxy = {version = "1.9.0", allow-prereleases = true}
# limits = {version = "3.4.0", allow-prereleases = true}
# linkify-it-py = {version = "2.0.2", allow-prereleases = true}
# lockfile = {version = "0.12.2", allow-prereleases = true}
# mako = {version = "1.2.4", allow-prereleases = true}
# markdown = {version = "3.4.3", allow-prereleases = true}
# markdown-it-py = {version = "2.2.0", allow-prereleases = true}
# markupsafe = {version = "2.1.2", allow-prereleases = true}
# marshmallow = {version = "3.19.0", allow-prereleases = true}
# marshmallow-enum = {version = "1.5.1", allow-prereleases = true}
# marshmallow-oneofschema = {version = "3.0.1", allow-prereleases = true}
# marshmallow-sqlalchemy = {version = "0.26.1", allow-prereleases = true}
# mccabe = {version = "0.6.1", allow-prereleases = true}
# mdit-py-plugins = {version = "0.3.5", allow-prereleases = true}
# mdurl = {version = "0.1.2", allow-prereleases = true}
# multidict = {version = "6.0.4", allow-prereleases = true}
# mypy-extensions = {version = "1.0.0", allow-prereleases = true}
# ordered-set = {version = "4.1.0", allow-prereleases = true}
# packaging = {version = "21.3", allow-prereleases = true}
# pathspec = {version = "0.9.0", allow-prereleases = true}
# pendulum = {version = "2.1.2", allow-prereleases = true}
# pkgutil-resolve-name = {version = "1.3.10", allow-prereleases = true}
# platformdirs = {version = "3.11.0", allow-prereleases = true}
# pluggy = {version = "1.0.0", allow-prereleases = true}
# prison = {version = "0.2.1", allow-prereleases = true}
# psutil = {version = "5.9.5", allow-prereleases = true}
# py4j = {version = "0.10.9.5", allow-prereleases = true}
# pycodestyle = {version = "2.8.0", allow-prereleases = true}
# pycparser = {version = "2.21", allow-prereleases = true}
# pydantic = {version = "1.10.7", allow-prereleases = true}
# pyflakes = {version = "2.4.0", allow-prereleases = true}
# pygments = {version = "2.15.1", allow-prereleases = true}
# pyjwt = {version = "2.7.0", allow-prereleases = true}
# pyparsing = {version = "3.0.9", allow-prereleases = true}
# pyrsistent = {version = "0.19.3", allow-prereleases = true}
# pyspark = {version = "3.3.0", allow-prereleases = true}
# pytest = {version = "7.4.3", allow-prereleases = true}
# pytest-mock = {version = "3.12.0", allow-prereleases = true}
# python-daemon = {version = "3.0.1", allow-prereleases = true}
# python-dateutil = {version = "2.8.2", allow-prereleases = true}
# python-nvd3 = {version = "0.15.0", allow-prereleases = true}
# python-slugify = {version = "8.0.1", allow-prereleases = true}
# pytz = {version = "2023.3", allow-prereleases = true}
# pytzdata = {version = "2020.1", allow-prereleases = true}
# pyyaml = {version = "6.0", allow-prereleases = true}
# requests = {version = "2.30.0", allow-prereleases = true}
# requests-toolbelt = {version = "1.0.0", allow-prereleases = true}
# rfc3339-validator = {version = "0.1.4", allow-prereleases = true}
# rfc3986 = {version = "1.5.0", allow-prereleases = true}
# rich = {version = "13.3.5", allow-prereleases = true}
# rich-argparse = {version = "1.1.0", allow-prereleases = true}
# setproctitle = {version = "1.3.2", allow-prereleases = true}
# six = {version = "1.16.0", allow-prereleases = true}
# sniffio = {version = "1.3.0", allow-prereleases = true}
# sqlalchemy = {version = "1.4.48", allow-prereleases = true}
# sqlalchemy-jsonfield = {version = "1.0.1.post0", allow-prereleases = true}
# sqlalchemy-utils = {version = "0.41.1", allow-prereleases = true}
# sqlparse = {version = "0.4.4", allow-prereleases = true}
# tabulate = {version = "0.9.0", allow-prereleases = true}
# taskipy = {version = "1.12.0", allow-prereleases = true}
# tenacity = {version = "8.2.2", allow-prereleases = true}
# termcolor = {version = "2.3.0", allow-prereleases = true}
# text-unidecode = {version = "1.3", allow-prereleases = true}
# tomli = {version = "2.0.1", allow-prereleases = true}
# typing-extensions = {version = "4.5.0", allow-prereleases = true}
# uc-micro-py = {version = "1.0.2", allow-prereleases = true}
# unicodecsv = {version = "0.14.1", allow-prereleases = true}
# urllib3 = {version = "1.26.15", allow-prereleases = true}
# werkzeug = {version = "2.2.3", allow-prereleases = true}
# wrapt = {version = "1.15.0", allow-prereleases = true}
# wtforms = {version = "3.0.1", allow-prereleases = true}
# yarl = {version = "1.9.2", allow-prereleases = true}
# zipp = {version = "3.15.0", allow-prereleases = true}

[tool.isort]
profile = "black"
known_third_party = []

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
test = "pytest -v"